# hal

./: .gitignore  pyproject.toml  setup.py
docs/: asset-manifest.json  index.html  manifest.json
docs/static/js/: app.e7cd7190.chunk.js  app.e7cd7190.chunk.js.map  runtime~app.f78fe9e5.js  runtime~app.f78fe9e5.js.map
hal/: client.py  config.py  dispatcher.py  hal.py  log_reader.py  logger.py  main.py  notion_client.py  param.py  reader.py  siren.py
sensors/: sensors.ino  sensors.py
