[tool.poetry]
name = "hal"
version = "2.0.0"
description = "Monitor lab instruments in real-time with a Notion frontend"
authors = ["qcrew <general.qcrew@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
notion-client = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
