[tool.poetry]
name = "hal"
version = "2.1.1"
description = "Monitor lab instruments in real-time with a Notion frontend"
authors = ["qcrew <general.qcrew@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
notion-client = "^1.0.0"
loguru = "^0.6.0"
Pint = "^0.19.2"
numpy = "^1.22.3"
pyserial = "^3.5"
slack-bolt = "^1.13.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[tool.poetry.scripts]
hal = "hal.main:main"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
